--- a/covid19/package.json
+++ b/covid19/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "angular-google-charts": "^1.1.3",
     "animate.css": "^3.7.2",
+    "bootstrap-social": "^5.1.1",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
